# kana-kanji-conversion-c-plus-plus

./: .gitignore  CMakeLists.txt  LICENSE-MOZC  README.md
.github/workflows/: release-dictionaries.yml
cli/kana_kanji/: astar_bunsetsu_cli.cpp  prefix_predict_cli.cpp
cli/louds/: cps_cli.cpp  termid_cli.cpp
src/common/: bit_vector.hpp  succinct_bit_vector.hpp
src/dictionary_builder/: dictionary_builder.cpp  tries_token_builder.cpp
src/dictionary_builder/connection_id/: connection_id_builder.cpp  connection_id_builder.hpp
src/dictionary_builder/louds_builder/common/: bit_vector_utf16.hpp  succinct_bit_vector_utf16.hpp
src/dictionary_builder/louds_builder/louds/: louds_converter_utf16.cpp  louds_converter_utf16.hpp  louds_utf16_reader.cpp  louds_utf16_reader.hpp  louds_utf16_writer.cpp  louds_utf16_writer.hpp
src/dictionary_builder/louds_builder/louds_with_term_id/: louds_converter_with_term_id_utf16.cpp  louds_converter_with_term_id_utf16.hpp  louds_with_term_id_reader_utf16.cpp  louds_with_term_id_reader_utf16.hpp  louds_with_term_id_utf16.cpp  louds_with_term_id_utf16.hpp
src/dictionary_builder/louds_builder/prefix_tree/: prefix_tree_utf16.cpp  prefix_tree_utf16.hpp
src/dictionary_builder/louds_builder/prefix_tree_with_term_id/: prefix_tree_with_term_id_utf16.cpp  prefix_tree_with_term_id_utf16.hpp
src/dictionary_builder/mozc_fetch/: mozc_fetch.cpp
src/dictionary_builder/token_array/: token_array.cpp  token_array.hpp
src/graph_builder/: graph.cpp  graph.hpp
src/louds/: converter.cpp  converter.hpp  louds.cpp  louds.hpp  louds_reader.cpp  louds_reader.hpp
src/louds_with_term_id/: converter_with_term_id.cpp  converter_with_term_id.hpp  louds_with_term_id.cpp  louds_with_term_id.hpp  louds_with_term_id_reader.cpp  louds_with_term_id_reader.hpp
src/path_algorithm/: find_path.cpp  find_path.hpp
src/prefix/: prefix_tree.cpp  prefix_tree.hpp
src/prefix_with_term_id/: prefix_tree_with_term_id.cpp  prefix_tree_with_term_id.hpp
tests/: test_louds.cpp  test_louds_reader.cpp  test_louds_with_term_id.cpp  test_louds_with_term_id_reader.cpp
